fix: return wrapped options for constructors

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -25,8 +25,3 @@ code code, pre code {
   margin: 0;
   padding: 0;
 }
-
-#header {
-  top: auto;
-  bottom: 0;
-}
